kubernetes/projects/applications/apps/personal-blog/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: personal-blog
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: personal-blog
    field.cattle.io/projectId: p-applications
    kubernetes.io/metadata.name: personal-blog
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    field.cattle.io/projectId: local:p-applications
    helm.sh/resource-policy: keep
    meta.helm.sh/release-name: personal-blog
    meta.helm.sh/release-namespace: personal-blog
