kubernetes/projects/applications/apps/personal-blog/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: personal-blog
  namespace: personal-blog
  labels:
    app.kubernetes.io/name: personal-blog
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: personal-blog
spec:
  type: ClusterIP
  trafficDistribution: PreferSameNode
  selector:
    app.kubernetes.io/name: personal-blog
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: personal-blog-headless
  namespace: personal-blog
  labels:
    app.kubernetes.io/name: personal-blog
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: personal-blog
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: personal-blog
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
